--- a/src/app/user-layout/profile/profile.component.html
+++ b/src/app/user-layout/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="profile">
     <div class="heading">
-       <h2>Profile</h2>
+       <img src="assets/user.jpg" class="image"><button class="icon"><i class="fa fa-pencil"></i></button>
   </div>
     <div class="col-sm-12">
       <div class="row">
@@ -63,7 +63,7 @@
                 />
               </div>
             </div>
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
               <div class="form-group">
                 <label>PinCode</label>
                 <input
@@ -72,19 +72,19 @@
                   formControlName="pincode"
                 />
               </div>
-            </div>
+            </div> -->
 
-           <div class="col-md-6">
+           <!-- <div class="col-md-6">
             <div class="form-group">
               <label>Address</label>
               <button (click) = 'createAddress()'>Address</button>
             </div>
-           </div>
+           </div> -->
 
           </div>
-          <div class="update-btn">
+          <!-- <div class="update-btn">
             <button class="btn btn-md btn-primary" type="submit">update</button>
-          </div>
+          </div> -->
         </form>
       </div>
     </div>
