--- a/src/app/user-layout/sidebar/sidebar.component.html
+++ b/src/app/user-layout/sidebar/sidebar.component.html
@@ -1,4 +1,6 @@
 <div class="sidebar">
-  <a [routerLink]="['profile']">profile</a>
-  <a [routerLink]="['myOrders']">myOrders</a>
+  <a [routerLink]="['profile']"><h5 class="fa fa-user" id>Profile</h5></a>
+  <a [routerLink]="['myOrders']"
+    ><h5 class="fa fa-shopping-cart">My Orders</h5></a
+  >
 </div>
