--- a/src/app/user-layout/user-layout.component.scss
+++ b/src/app/user-layout/user-layout.component.scss
@@ -1,8 +1,9 @@
 .sidenav-wrapper {
   position: absolute;
   width: 240px;
-  height: 100vh;
-  top: 0px;
+  height: 91vh;
+  left: 0px;
+  top: 72px;
   z-index: 20;
   padding-top: 70px;
   background: #1f2a2c;
