--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -1,3 +1,84 @@
-<p>
-  check-out works!
-</p>
+<section class="container">
+  <div class="userdata mr-2">
+    <div class="d-flex form-group">
+      <label class="col-md-3">Name:</label>
+      <input
+        class="col-md-6 form-control"
+        type="text"
+        formControlName="owner_name"
+        value="{{userDetails.owner_name}}"
+      />
+    </div>
+    <div class="d-flex form-group">
+      <label class="col-md-3">Email:</label>
+      <input
+        class="col-md-6 form-control"
+        type="text"
+        formControlName="owner_email"
+        value="{{userDetails.email}}"
+      />
+    </div>
+    <div class="d-flex form-group">
+      <label class="col-md-3">PhoneNumber:</label>
+      <input
+        class="col-md-6 form-control"
+        type="text"
+        formControlName="owner_phoneNumber"
+        value="{{userDetails.mobile_number}}"
+      />
+    </div>
+    <div class="button">
+      <button class="btn btn-primary">Add New Address</button>
+    </div>
+  </div>
+  <div class="typeofaddress">
+    <form
+      class="address"
+      [formGroup]="addressForm"
+      (ngSubmit)="addNewAddress()"
+    >
+      <div class="form-group">
+        <label>Select Type</label>
+        <select class="form-control" name="Type">
+          <option value="type">Select</option>
+          <option value="Home">Home</option>
+          <option value="Office">Office</option>
+          <option value="Other">Other</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label>Address</label>
+        <textarea
+          class="form-control textarea"
+          placeholder="Enter Address..."
+          cols="50"
+        ></textarea>
+      </div>
+      <div class="submit-btn">
+        <button class="btn btn-md btn-primary" type="submit">Submit</button>
+      </div>
+    </form>
+  </div>
+  <div class="margin">
+    <label class="con">Select Address:</label>
+    <div class="row">
+      <div class="col-md-6 radio">
+        <label id="button"
+          ><input type="radio" name="address" />TypeName :<br />Address:</label
+        >
+      </div>
+      <!-- <div class="col-md-6 radio">
+        <label id="button"><input type="radio" name="address">TypeName :<br>Address:</label>
+      </div> 
+      <div class="col-md-6 radio">
+        <label id="button"><input type="radio" name="address">TypeName :<br>Address:</label>
+      </div> 
+      <div class="col-md-6 radio">
+        <label id="button"><input type="radio" name="address">TypeName :<br>Address:</label>
+      </div> -->
+    </div>
+  </div>
+</section>
+<div>
+  <button class="confirm  btn-lg btn-primary">Confirm & Submit</button>
+</div>
