--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -5,8 +5,7 @@
       <input
         class="col-md-6 form-control"
         type="text"
-        formControlName="owner_name"
-        value="{{userDetails.owner_name}}"
+        value="{{ userDetails.owner_name }}"
       />
     </div>
     <div class="d-flex form-group">
@@ -14,8 +13,7 @@
       <input
         class="col-md-6 form-control"
         type="text"
-        formControlName="owner_email"
-        value="{{userDetails.email}}"
+        value="{{ userDetails.email }}"
       />
     </div>
     <div class="d-flex form-group">
@@ -23,15 +21,14 @@
       <input
         class="col-md-6 form-control"
         type="text"
-        formControlName="owner_phoneNumber"
-        value="{{userDetails.mobile_number}}"
+        value="{{ userDetails.mobile_number }}"
       />
     </div>
     <div class="button">
-      <button class="btn btn-primary">Add New Address</button>
+      <button class="btn btn-primary" (click) = "addNewDeliveryAddress()">Add New Address</button>
     </div>
   </div>
-  <div class="typeofaddress">
+  <div class="typeofaddress" *ngIf="showhideAddressForm">
     <form
       class="address"
       [formGroup]="addressForm"
@@ -39,11 +36,15 @@
     >
       <div class="form-group">
         <label>Select Type</label>
-        <select class="form-control" name="Type">
+        <select
+          class="form-control"
+          name="Type"
+          (change)="onchange($event.target.value)"
+        >
           <option value="type">Select</option>
-          <option value="Home">Home</option>
-          <option value="Office">Office</option>
-          <option value="Other">Other</option>
+          <option value="1">Home</option>
+          <option value="2">Office</option>
+          <option value="3">Other</option>
         </select>
       </div>
       <div class="form-group">
@@ -52,6 +53,7 @@
           class="form-control textarea"
           placeholder="Enter Address..."
           cols="50"
+          formControlName="userAddress"
         ></textarea>
       </div>
       <div class="submit-btn">
@@ -62,9 +64,10 @@
   <div class="margin">
     <label class="con">Select Address:</label>
     <div class="row">
-      <div class="col-md-6 radio">
+      <div class="col-md-6 radio" *ngFor="let address of addressList">
         <label id="button"
-          ><input type="radio" name="address" />TypeName :<br />Address:</label
+          ><input type="radio" name="address" />TypeName :{{ address.type_name
+          }}<br />Address:{{ address.address }}</label
         >
       </div>
       <!-- <div class="col-md-6 radio">
@@ -80,5 +83,5 @@
   </div>
 </section>
 <div>
-  <button class="confirm  btn-lg btn-primary">Confirm & Submit</button>
+  <button class="confirm  btn-lg btn-primary" >Confirm & Submit</button>
 </div>
