thank you component creared

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -77,4 +77,8 @@
     </div>
   </div>
 </section>
-<button (click) = "checkOut()">CheckOut</button>
+<div class=" empty-cart">
+<button type="button" class="btn btn-success" (click) = "checkOut()">
+  CheckOut
+</button>
+</div>
