--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -25,14 +25,14 @@
       />
     </div>
     <div class="button">
-      <button class="btn btn-primary" (click) = "addNewDeliveryAddress()">Add New Address</button>
+      <button class="btn btn-primary" (click) = "addNewDeliveryAddress(odd)">Add New Delivery Address</button>
     </div>
   </div>
   <div class="typeofaddress" *ngIf="showhideAddressForm">
     <form
       class="address"
       [formGroup]="addressForm"
-      (ngSubmit)="addNewAddress()"
+      (ngSubmit)="createNewAddress()"
     >
       <div class="form-group">
         <label>Select Type</label>
@@ -66,7 +66,7 @@
     <div class="row">
       <div class="col-md-6 radio" *ngFor="let address of addressList">
         <label id="button"
-          ><input type="radio" name="address" />TypeName :{{ address.type_name
+          ><input type="radio" name="address"  (click) = "changeAddress(address.address_id)"/>TypeName :{{ address.type_name
           }}<br />Address:{{ address.address }}</label
         >
       </div>
@@ -83,5 +83,5 @@
   </div>
 </section>
 <div>
-  <button class="confirm  btn-lg btn-primary" >Confirm & Submit</button>
+  <button class="confirm  btn-lg btn-primary" (click) = "confirmOrder()">Confirm & Submit</button>
 </div>
