check-out changes

--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -25,7 +25,7 @@
       />
     </div>
     <div class="button">
-      <button class="btn btn-primary" (click) = "addNewDeliveryAddress(odd)">Add New Delivery Address</button>
+      <button class="btn btn-primary" (click) = "addNewDeliveryAddress()">Add New Delivery Address</button>
     </div>
   </div>
   <div class="typeofaddress" *ngIf="showhideAddressForm">
