add address fields in profile component

--- a/src/app/user-layout/profile/profile.component.scss
+++ b/src/app/user-layout/profile/profile.component.scss
@@ -31,3 +31,41 @@
   position: absolute;
   left: 800px;
 }
+
+.button1 {
+  margin-top: 22px;
+  margin-bottom: 20px;
+  text-align: center;
+  /*margin-left: 390px;*/
+}
+
+.address-text p{
+  margin-top:25px;
+  font-size:20px;
+}
+
+.btn {
+  color: #fff;
+  height: 37px;
+  // background-color: #0062cc;
+  // border-color: #005cbf;
+  // border-radius: 20px;
+}
+
+.profile-address {
+  margin-bottom: 14px;
+  text-align: center;
+  padding:6px;
+  border: 1px solid #e9ecef;
+
+} 
+
+.profile-address p {
+  padding:0px;
+  margin: 4px;  
+}
+
+.edit-buttons button{
+  margin-left:13px;
+
+}
