--- a/src/app/user-layout/profile/profile.component.html
+++ b/src/app/user-layout/profile/profile.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="profile">
     <div class="heading">
-       <img src="assets/user.jpg" class="image"><button class="icon"><i class="fa fa-pencil"></i></button>
-  </div>
+      <img src="assets/user.jpg" class="image"><button class="icon"><i class="fa fa-pencil"></i></button>
+    </div>
     <div class="col-sm-12">
       <div class="row">
         <form [formGroup]="profileForm" (ngSubmit)="update()">
@@ -10,41 +10,25 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label>ShopName</label>
-                <input
-                  class="form-control"
-                  type="text"
-                  formControlName="shop_name"
-                />
+                <input class="form-control" type="text" formControlName="shop_name" />
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
                 <label>OwnerName</label>
-                <input
-                  class="form-control"
-                  type="text"
-                  formControlName="owner_name"
-                />
+                <input class="form-control" type="text" formControlName="owner_name" />
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
                 <label>GST Number</label>
-                <input
-                  class="form-control"
-                  type="text"
-                  formControlName="gst_number"
-                />
+                <input class="form-control" type="text" formControlName="gst_number" />
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
                 <label>MobileNumber</label>
-                <input
-                  class="form-control"
-                  formControlName="mobile_number"
-                  readonly
-                />
+                <input class="form-control" formControlName="mobile_number" readonly />
               </div>
             </div>
             <div class="col-md-6">
@@ -56,14 +40,102 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label>Address</label>
-                <input
-                  class="form-control"
-                  type="text"
-                  formControlName="address"
-                />
+                <input class="form-control" type="text" formControlName="address" />
               </div>
             </div>
-            <!-- <div class="col-md-6">
+          </div>
+        </form>
+      </div>
+    </div>
+    <section>
+      <div class="col-md-12">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="button1">
+              <button class="btn btn-primary" (click)="addNewDeliveryAddress()">Add New Address</button>
+            </div>
+            <div class="typeofaddress">
+              <form class="address" [formGroup]="addressForm" (ngSubmit)="createNewAddress()">
+                <div class="form-group">
+                  <label>Select Type</label>
+                  <select class="form-control" name="Type" (change)="onchange($event.target.value)">
+                    <option value="type">Select</option>
+                    <option value="Home">Home</option>
+                    <option value="Office">Office</option>
+                    <option value="Other">Other</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label>Address</label>
+                  <textarea class="form-control textarea" placeholder="Enter Address..." cols="50"
+                    formControlName="userAddress"></textarea>
+                </div>
+                <div class="submit-btn">
+                  <button class="btn btn-md btn-primary" type="submit">Submit</button>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="address-text">
+              <p><b>Address</b></p>
+            </div>
+            <div class="col-md-12 profile-address">
+              <button type="button" class="btn btn-md btn-primary" name="home">HOME</button>
+              <p>13-7-111,</p>
+              <p>ABC colony,</p>
+              <p>Visakhapatnam.</p>
+
+              <div class="edit-buttons">
+                <button type="button" class="btn btn-md btn-success" name="edit">Edit</button>
+                <button type="button" class="btn btn-md btn-success" name="delete">Delete</button>
+              </div>
+            </div>
+
+            <div class="col-md-12 profile-address">
+              <button type="button" class="btn btn-md btn-primary" name="home">PERSONAL</button>
+              <p>13-7-111,</p>
+              <p>ABC colony,</p>
+              <p>Visakhapatnam.</p>
+
+              <div class="edit-buttons">
+                <button type="button" class="btn btn-md btn-success" name="edit">Edit</button>
+                <button type="button" class="btn btn-md btn-success" name="delete">Delete</button>
+              </div>
+            </div>
+
+            <div class="col-md-12 profile-address">
+              <button type="button" class="btn btn-md btn-primary" name="home">WORK</button>
+              <p>13-7-111,</p>
+              <p>ABC colony,</p>
+              <p>Visakhapatnam.</p>
+
+              <div class="edit-buttons">
+                <button type="button" class="btn btn-md btn-success" name="edit">Edit</button>
+                <button type="button" class="btn btn-md btn-success" name="delete">Delete</button>
+              </div>
+            </div>
+
+
+            <!-- <div class="margin">
+              <label class="con">Select Address:</label>
+              <div class="row">
+                <div class="col-md-12 radio">
+                  <label id="button"><input type="radio" name="address" (click)="changeAddress(address.address_id)">TypeName:{{ address.type_name}}<br> Address :{{ address.address }}</label>
+                </div>
+              </div>
+            </div> -->
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+</div>
+
+
+
+
+<!-- <div class="col-md-6">
               <div class="form-group">
                 <label>PinCode</label>
                 <input
@@ -74,19 +146,14 @@
               </div>
             </div> -->
 
-           <!-- <div class="col-md-6">
+<!-- <div class="col-md-6">
             <div class="form-group">
               <label>Address</label>
               <button (click) = 'createAddress()'>Address</button>
             </div>
            </div> -->
 
-          </div>
-          <!-- <div class="update-btn">
+
+<!-- <div class="update-btn">
             <button class="btn btn-md btn-primary" type="submit">update</button>
           </div> -->
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
