--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -34,7 +34,7 @@
         <li class="nav-item" *ngIf="!isShowhide">
           <a class="nav-link" [routerLink]="['signUp']"><i class="fa fa-user-plus cart-custom"> SignUp</i></a>
         </li>
-        <li class="nav-item dropdown" *ngIf="isShowhide">
+        <li class="nav-item dropdown custom-dropdown" *ngIf="isShowhide">
           <img src="assets/user.jpg" alt="image" class="user-image" />
           <a
             class="nav-link dropdown-toggle"
