--- a/src/app/user-layout/profile/profile.component.html
+++ b/src/app/user-layout/profile/profile.component.html
@@ -54,15 +54,14 @@
             <div class="button1">
               <button class="btn btn-primary" (click)="addNewDeliveryAddress()">Add New Address</button>
             </div>
-            <div class="typeofaddress">
+            <div class="typeofaddress" *ngIf="showhideuseraddressForm">
               <form class="address" [formGroup]="addressForm" (ngSubmit)="createNewAddress()">
                 <div class="form-group">
                   <label>Select Type</label>
-                  <select class="form-control" name="Type" (change)="onchange($event.target.value)">
-                    <option value="type">Select</option>
-                    <option value="Home">Home</option>
-                    <option value="Office">Office</option>
-                    <option value="Other">Other</option>
+                  <select class="form-control" name="Type" forsmControleName = "userType" (change)="addressTypeChange($event.target.value)">
+                    <option value="type" hidden >Select</option>
+                    <option value="1" *ngFor="let type of addressTypes">{{type.type_name}}</option>
+                   
                   </select>
                 </div>
                 <div class="form-group">
@@ -80,51 +79,16 @@
             <div class="address-text">
               <p><b>Address</b></p>
             </div>
-            <div class="col-md-12 profile-address">
-              <button type="button" class="btn btn-md btn-primary" name="home">HOME</button>
-              <p>13-7-111,</p>
-              <p>ABC colony,</p>
-              <p>Visakhapatnam.</p>
-
+            <div class="col-md-12 profile-address" *ngFor = "let address of addressList">
+              <p class="address-type">{{address.type_name}}</p>
               <div class="edit-buttons">
-                <button type="button" class="btn btn-md btn-success" name="edit">Edit</button>
-                <button type="button" class="btn btn-md btn-success" name="delete">Delete</button>
+                <button type="button" class="btn btn-sm btn-success" name="edit" (click) = 'userUpdateAddress(address.address_id,address.type_name,address.address )' ><i class="fa fa-pencil"></i></button>
+                <button type="button" class="btn btn-sm btn-danger" name="delete" (click) = 'userDeleteAddress(address.address_id)'><i class="fa fa-trash"></i></button>
               </div>
+              <p>{{address.address}}</p>
             </div>
 
-            <div class="col-md-12 profile-address">
-              <button type="button" class="btn btn-md btn-primary" name="home">PERSONAL</button>
-              <p>13-7-111,</p>
-              <p>ABC colony,</p>
-              <p>Visakhapatnam.</p>
-
-              <div class="edit-buttons">
-                <button type="button" class="btn btn-md btn-success" name="edit">Edit</button>
-                <button type="button" class="btn btn-md btn-success" name="delete">Delete</button>
-              </div>
-            </div>
-
-            <div class="col-md-12 profile-address">
-              <button type="button" class="btn btn-md btn-primary" name="home">WORK</button>
-              <p>13-7-111,</p>
-              <p>ABC colony,</p>
-              <p>Visakhapatnam.</p>
-
-              <div class="edit-buttons">
-                <button type="button" class="btn btn-md btn-success" name="edit">Edit</button>
-                <button type="button" class="btn btn-md btn-success" name="delete">Delete</button>
-              </div>
-            </div>
-
-
-            <!-- <div class="margin">
-              <label class="con">Select Address:</label>
-              <div class="row">
-                <div class="col-md-12 radio">
-                  <label id="button"><input type="radio" name="address" (click)="changeAddress(address.address_id)">TypeName:{{ address.type_name}}<br> Address :{{ address.address }}</label>
-                </div>
-              </div>
-            </div> -->
+           
           </div>
         </div>
       </div>
@@ -135,25 +99,3 @@
 
 
 
-<!-- <div class="col-md-6">
-              <div class="form-group">
-                <label>PinCode</label>
-                <input
-                  class="form-control"
-                  type="text"
-                  formControlName="pincode"
-                />
-              </div>
-            </div> -->
-
-<!-- <div class="col-md-6">
-            <div class="form-group">
-              <label>Address</label>
-              <button (click) = 'createAddress()'>Address</button>
-            </div>
-           </div> -->
-
-
-<!-- <div class="update-btn">
-            <button class="btn btn-md btn-primary" type="submit">update</button>
-          </div> -->
